# python-dev-settings

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: example.py
test/: test_example.py
